--- a/readme
+++ b/readme
@@ -1,2 +1,2 @@
-# RCP-database-and-search-tool
+##RCP-database-and-search-tool
 People in this world who have an interest in reading news and stories, more often face difficulty in reading particular story events and milestones in chronological order. And with that, if someone is more interested into the political news and stories, they know how difficult it is to obtain an overall idea of the actual story events that already happened and follow that story, and hard to find arguments for both sides of an issue.  RCP (Real Clear Politics) is a website that greatly helps with this problem.  This tool is structured and designed to crawl and store RCP data, and at the same time provide functionality to the users, where they can search for political stories in chronological order. The user interface allows you to filter stories based on author name, publishing agency and published date.  All these data are stored in a database and collected from realclearpolitics.com by crawling and reading their RSS feed on a daily basis. The application uses full advantage of responsive layout, where the user can open and use this web tool on their tablet, phone and computer.  This paper provides the ground level concept of a creating and developing user-friendly news search engine, which can be extended to a larger scale, adding more news sources to crawl and expose stored data to users.
